unpackaged/main/default/objects/Irregular_Payment__c/Irregular_Payment__c.object-meta.xml
<CustomObject>
    <label>Irregular Payment</label>
    <nameField>
        <displayFormat>Payment-{000000}</displayFormat>
        <label>Irregular Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Irregular Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>