unpackaged/main/default/objects/Irregular_Payment__c/fields/Contingency__c.field-meta.xml
<CustomField>
    <fullName>Contingency__c</fullName>
    <label>Contingency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Not Paid</fullName>
            </value>
            <value>
                <fullName>Not Due</fullName>
            </value>
            <value>
                <fullName>Due</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>