unpackaged/main/default/objects/Irregular_Payment__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>From which Account</inlineHelpText>
    <label>From</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Irregular Payments</relationshipLabel>
    <relationshipName>Irregular_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>