unpackaged/main/default/objects/Irregular_Payment__c/fields/Matter__c.field-meta.xml
<CustomField>
    <fullName>Matter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matter</label>
    <referenceTo>advpm__Matter__c</referenceTo>
    <relationshipLabel>Irregular Payments</relationshipLabel>
    <relationshipName>Irregular_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>