unpackaged/main/default/objects/Irregular_Payment__c/fields/Matter_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Matter_Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Results filtered so only related Matter Bank Accounts display in results</description>
    <label>Matter Bank Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Matter_Bank_Account__c.Matter__c</field>
            <operation>equals</operation>
            <valueField>$Source.Matter__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Matter_Bank_Account__c</referenceTo>
    <relationshipLabel>Irregular Payments</relationshipLabel>
    <relationshipName>Irregular_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>