unpackaged/main/default/objects/Irregular_Payment__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <label>Payment Applied</label>
    <type>Date</type>
</CustomField>