unpackaged/main/default/objects/Irregular_Payment__c/fields/Payment_Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Issued_Date__c</fullName>
    <label>Payment Issued Date</label>
    <type>Date</type>
</CustomField>