unpackaged/main/default/objects/Irregular_Payment__c/validationRules/Payment_Method_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Method_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Payment_Method__c, "Check"),
ISBLANK(Check_Number__c)
)</errorConditionFormula>
    <errorMessage>You chose the Payment Method of "Check", please be sure to populate the Check Number</errorMessage>
</ValidationRule>